@@ -33,3 +33,8 @@ See <<kafka-template-receive>> for more information.
 
 The legacy `GenericErrorHandler` and its sub-interface hierarchies for record an batch listeners have been replaced by a new single interface `CommonErrorHandler` with implementations corresponding to most legacy implementations of `GenericErrorHandler`.
 See <<error-handlers>> for more information.
+
+[[x28-lcc]]
+==== Listener Container Changes
+
+The `interceptBeforeTx` container property is now `true` by default.
